--- a/src/main/resources/com/embyhelper/i18n/messages_en.properties
+++ b/src/main/resources/com/embyhelper/i18n/messages_en.properties
@@ -127,3 +127,16 @@ dialog.rename.isJson = Is JSON (Key-Value)
 dialog.rename.simpleName = Simple Name:
 dialog.rename.key = Key:
 dialog.rename.value = Value:
+# --- (NEW) Copy Metadata ---
+pane.copyMetadata.title = Copy Metadata (by OriginalTitle)
+label.copySourceParentId = Source Parent ID:
+prompt.copySourceParentId = Enter parent ID containing source items...
+button.findSourceItems = Find Source Items
+label.sourceItemList = Source Items (select 1):
+label.destinationItemList = Destination Items (select 1 to paste over):
+button.runCopyMetadata = Execute Copy
+table.col.name = Name
+table.col.originalTitle = OriginalTitle
+table.col.id = ID
+table.col.images = Images (P/B)
+table.col.path = Path
