--- a/src/main/resources/com/embyhelper/i18n/messages_en.properties
+++ b/src/main/resources/com/embyhelper/i18n/messages_en.properties
@@ -140,3 +140,11 @@ table.col.originalTitle = OriginalTitle
 table.col.id = ID
 table.col.images = Images (P/B)
 table.col.path = Path
+# --- (THÊM MỚI CHO YÊU CẦU NÂNG CẤP) ---
+prompt.sourceFilter = Search by OriginalTitle...
+button.runCopyAllMetadata = Apply All Matches
+task.copyAll.start = Starting 'Apply All'. Found %d source items with matches.
+task.copyAll.progress = Applying (%d/%d): Copying from %s to %s
+task.copyAll.done = 'Apply All' complete. Total %d copy operations executed.
+status.copy.findingMatches = Finding matches: (%d/%d) %s
+status.copy.foundMatches = Found %d source items with available destinations.
