--- a/src/main/resources/com/embyhelper/i18n/messages_vi.properties
+++ b/src/main/resources/com/embyhelper/i18n/messages_vi.properties
@@ -132,3 +132,11 @@ table.col.originalTitle = OriginalTitle
 table.col.id = ID
 table.col.images = Ảnh (P/B)
 table.col.path = Đường dẫn
+# --- (THÊM MỚI CHO YÊU CẦU NÂNG CẤP) ---
+prompt.sourceFilter = Tìm theo OriginalTitle...
+button.runCopyAllMetadata = Áp dụng Tất cả
+task.copyAll.start = Bắt đầu 'Áp dụng Tất cả'. Tìm thấy %d item nguồn có item đích.
+task.copyAll.progress = Đang áp dụng (%d/%d): Sao chép từ %s sang %s
+task.copyAll.done = 'Áp dụng Tất cả' hoàn tất. Đã thực thi %d thao tác sao chép.
+status.copy.findingMatches = Đang tìm cặp khớp: (%d/%d) %s
+status.copy.foundMatches = Tìm thấy %d item nguồn có item đích khả dụng.
